--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins"
-        android:text="Add Task."
+        android:text="@string/enter_title"
         android:textColor="@color/orange"
         android:textSize="24sp" />
 
@@ -21,6 +20,7 @@
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/save_button_description"
         android:src="@drawable/baseline_done_24"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/addNoteHeading"
@@ -30,7 +30,9 @@
         android:id="@+id/titleEditText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Enter the title"
+        android:hint="@string/enter_title"
+        android:autofillHints="title"
+        android:inputType="text"
         android:padding="12dp"
         android:textSize="20sp"
         android:layout_below="@id/addNoteHeading"
@@ -46,7 +48,9 @@
         android:id="@+id/contentEditText"
         android:layout_width="match_parent"
         android:layout_height="220dp"
-        android:hint="Enter the description"
+        android:hint="@string/enter_description"
+        android:autofillHints="description"
+        android:inputType="text"
         android:fontFamily="@font/poppins"
         android:gravity="top"
         android:padding="12dp"
@@ -82,7 +86,9 @@
         android:id="@+id/categoryEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter category"
+        android:hint="@string/enter_category"
+        android:autofillHints="category"
+        android:inputType="text"
         android:padding="12dp"
         android:textSize="18sp"
         android:background="@drawable/orange_border"
