--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/titleTextview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Title"
+                    android:text="@string/title_label"
                     android:fontFamily="@font/poppins"
                     android:textColor="@color/orange"
                     android:textSize="18sp"
@@ -33,6 +33,7 @@
                 
                 <ImageView
                     android:id="@+id/updateButton"
+                    android:contentDescription="@string/update_button_description"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
@@ -42,6 +43,7 @@
 
                 <ImageView
                     android:id="@+id/deleteButton"
+                    android:contentDescription="@string/delete_button_description"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
@@ -54,7 +56,7 @@
                 android:id="@+id/contentTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Content"
+                android:text="@string/content_label"
                 android:fontFamily="@font/poppins"
                 android:maxLines="3"
                 android:layout_marginTop="4dp"
